2014-06-11 Deng Pang <DengPang@rst.ricoh.com>
      * db/source/PPD/Gestetner/PS/Gestetner-MP_C401_PS.ppd,
        db/source/printer/Gestetner-MP_C401.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C401SR_PS.ppd,
        db/source/printer/Gestetner-MP_C401SR.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C401_PS.ppd,
        db/source/printer/Lanier-MP_C401.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C401SR_PS.ppd,
        db/source/printer/Lanier-MP_C401SR.xml,
        db/source/PPD/NRG/PS/NRG-MP_C401_PS.ppd,
        db/source/printer/NRG-MP_C401.xml,
        db/source/PPD/NRG/PS/NRG-MP_C401SR_PS.ppd,
        db/source/printer/NRG-MP_C401SR.xml,
        db/source/PPD/Ricoh/PS/Ricoh-MP_C401_PS.ppd,
        db/source/printer/Ricoh-MP_C401.xml,
        db/source/PPD/Ricoh/PS/Ricoh-MP_C401SR_PS.ppd,
        db/source/printer/Ricoh-MP_C401SR.xml,
        db/source/PPD/Savin/PS/Savin-MP_C401_PS.ppd,
        db/source/printer/Savin-MP_C401.xml,
        db/source/PPD/Savin/PS/Savin-MP_C401SR_PS.ppd,
        db/source/printer/Savin-MP_C401SR.xml,
        db/source/PPD/Infotec/PS/Infotec-MP_C401_PS.ppd,
        db/source/printer/Infotec-MP_C401.xml,
        db/source/PPD/Infotec/PS/Infotec-MP_C401SR_PS.ppd,
        db/source/printer/Infotec-MP_C401SR.xml:
        added PPD and XML files for 12 new printers.

2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/printer/Brother-HL-2135.xml: Added Brother HL-2135
	  (Ubuntu bug #1180996).

2014-04-07  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/printer/Fuji_Xerox-DocuPrint_CM305_df.xml: Corrected order
	  of the margin dimensions to get a correct PPD file (Bug #1195).

2014-04-02  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/opt/Postscript-RGBProfile.xml: Added RGBProfile option
	  for correct SRGB use with the Fuji Xerox DocuPrint CM305 df in
	  PostScript mode (Thanks to Adrian Johnson for this contribution.
	* db/source/opt/Postscript-InputSlot.xml: Added nissing default value