@@ -1,0 +1,43 @@
+<driver id="driver/brlaser">
+  <name>brlaser</name>
+  <url>https://github.com/pdewacht/brlaser</url>
+  <supplier>brlaser project</supplier>
+  <thirdpartysupplied />
+  <license>GPL</license>
+  <supportcontacts>
+    <supportcontact url="http://forums.openprinting.org/list.php?24" level="voluntary">OpenPrinting forum for Brother printers</supportcontact>
+  </supportcontacts>
+  <shortdescription>
+    <en>
+      Free software printer driver for Brother DCP laser printers
+    </en>
+  </shortdescription>
+  <functionality>
+    <maxresx>1200</maxresx>
+    <maxresy>1200</maxresy>
+    <monochrome />
+  </functionality>
+  <execution>
+    <cups />
+  </execution>
+  <comments>
+    <en>
+
+      Free software printer driver for Brother DCP laser printers
+      which require the print data in a proprietary format. It is
+      known to work with the DCP-7030 and DCP-7065DN. If you have a
+      Brother printer which does nmot work with any opf the other free
+      software printer drivers, try this driver and report your
+      results.
+
+    </en>
+  </comments>
+  <printers>
+    <printer>
+      <id>printer/Brother-DCP-7030</id>
+    </printer>
+    <printer>
+      <id>printer/Brother-DCP-7065DN</id>
+    </printer>
+  </printers>
+</driver>
