@@ -1,0 +1,48 @@
+<printer id="printer/Brother-DCP-7065DN">
+  <make>Brother</make>
+  <model>DCP-7065DN</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <margins>
+      <general>
+        <unit>pt</unit>
+        <relative />
+        <top>8</top>
+        <left>8</left>
+        <right>8</right>
+        <bottom>16</bottom>
+      </general>
+    </margins>
+  </mechanism>
+  <lang>
+    <proprietary />
+    <pjl />
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Brother;CMD:PJL,HBP;MDL:DCP-7065DN;CLS:PRINTER;CID:Brother Laser Type1;</ieee1284>
+      <manufacturer>Brother</manufacturer>
+      <model>DCP-7065DN</model>
+    </general>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>brlaser</driver>
+  <drivers>
+    <driver>
+      <id>brlaser</id>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+      This printer uses a proprietary format for the job data and
+      therefore the only free software driver for it is the
+      &quot;brlaser&quot; driver.
+    </en>
+  </comments>
+</printer>
