@@ -1,3 +1,10 @@
+2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/brlaser.xml: Added new "brlaser" driver for Brother DCP
+	  laser printers.
+	* printer/Brother-DCP-7030.xml, printer/Brother-DCP-7065DN.xml:
+	  Added Brother printers supported by the "brlaser" driver.
+
 2014-06-11 Deng Pang <DengPang@rst.ricoh.com>
       * db/source/PPD/Gestetner/PS/Gestetner-MP_C401_PS.ppd,
         db/source/printer/Gestetner-MP_C401.xml,
